Crisis Response App/objects/Einstein_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CertName__c</fullName>
        <description>the Salesforce name of your security certificate.  (PKS method)</description>
        <inlineHelpText>the Salesforce name of your security certificate</inlineHelpText>
        <label>CertName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Einstein_EMail__c</fullName>
        <label>Einstein EMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FeatureCode__c</fullName>
        <inlineHelpText>Only enter values in this field if instructed to do so by Salesforce</inlineHelpText>
        <label>FeatureCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secret_Key__c</fullName>
        <label>Secret Key</label>
        <type>TextArea</type>
    </fields>
    <label>Einstein Settings</label>
</CustomObject>